# CUDA-and-OpenCL

./: README.md
code/lab4/: error_wrapper.cu  grid.cu  mat_mul_malloc.cu  mat_mul_managed.cu  script.sh
code/lab5/: asynch_prefetch_data.cu  memory_managment.cu  page_faults_cpu-gpu.cu  page_faults_cpu_only.cu  page_faults_gpu-cpu.cu  page_faults_gpu_only.cu  prefetch_output_2_cpu.cu  run.sh
code/lab6/: heat.c  saxpy.cu  vector_add_streams.cu
code/lab7/: vadd.cpp  vadd_c.c
code/lab8/: histogram-pattern.cu
code/lab9/: main.cu
litwin/: lab3-matrix.cu
project/: CMakeLists.txt
project/include/: api_header.h  common_header.h  matrix_header.h  util_header.h  vector_header.h
project/src/: api_implement.cu  common_add.cu  common_scalar_mul.cu  common_sub.cu  matrix_inverse.cu  matrix_mul.cu  projectMain.cu  util_implement.cu  vector_dot_product.cu
reports/: CUDA_Report_lab_2.odt  CUDA_Report_lab_4.odt  CUDA_Report_lab_5.odt  CUDA_Report_lab_6.odt  CUDA_Report_lab_7.odt  CUDA_Report_lab_8.odt  CUDA_Report_lab_9.odt  lab3.ods  lab3_raport.odt  lab4.ods  lab5.ods  lab8.ods  lab9.ods
